--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,1 +1,24 @@
-<footer class="footer">footer</footer>
+<footer class="footer">
+    <div class="container">
+        <div class="footer-wrap">
+            <nav class="mb-24 footer-nav">
+                <section class="d-flex aic row">
+                    <a href="index.html" class="mr-auto col-10 logo">
+                    <!-- logo 圖片 連結到首頁 index -->
+                        <img src="../assets/images/desktop/logo.svg" alt="logo-image">
+                    </a>
+                    <ul class="d-flex nav-menu">
+                        <li class="col-1 mr-40"><a href="product-list.html">商品列表</a></li>
+                        <!-- 連結到 產品列表頁面 -->
+                        <li class="col-1"><a href="brand-intro.html">品牌故事</a></li>
+                        <!-- 連結到 品牌介紹頁面 -->
+                    </ul>
+                </section>
+            </nav>
+            <footer class="footer-copyright">
+                <p class="mb-4">Copyright ©2025 URBNSTYLE</p>
+                <p>All Rights Reserved.</p>
+            </footer>
+        </div>
+    </div>
+</footer>
