--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,7 +1,14 @@
-// 元件設定
+// 引入字體
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Tourney:ital,wght@0,100..900;1,100..900&display=swap');
+
+// 通用樣式
 @import './helper/variables';
 @import './base/reset';
 @import './base/base';
+@import './helper/utils';
+
+// 元件設定
+@import './components/breadcrumb';
 @import './components/button';
 
 // 區塊設定
