--- a/assets/scss/helper/_utils.scss
+++ b/assets/scss/helper/_utils.scss
@@ -207,12 +207,12 @@
         margin-right: 8px;
     }
     .py-md-24{
-        margin-top: 24px;
-        margin-bottom: 24px;
+        padding-top: 24px;
+        padding-bottom: 24px;
     }
     .py-md-40{
-        margin-top: 40px;
-        margin-bottom: 40px;
+        padding-top: 40px;
+        padding-bottom: 40px;
     }
     .gap-md-0{
         gap: 0;
