--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -47,12 +47,13 @@
         background-image: url(/assets/images/mobile/banner-sm.png);
         padding-top: 155px;
         padding-bottom: 155px;
-        padding-left: 24px;
+        padding-left: 12px;
+        padding-right: 12px;
     }
-    .banner-cta .display-2{
+    .banner-cta .display-1{
         font-size: 48px;
     }
-    .banner-cta .h3{
+    .banner-cta h3{
         font-size: 20px;
     }
 }
