--- a/assets/scss/pages/_brand-intro.scss
+++ b/assets/scss/pages/_brand-intro.scss
@@ -8,6 +8,12 @@
         padding-right: 12px;
     }
 }
+@media(max-width: 376px){
+    .container-brand-intro{
+        padding-left: 8px;
+        padding-right: 8px;
+    }
+}
 
 .hero-section{
     color: #fff;
