--- a/assets/scss/pages/_product-list.scss
+++ b/assets/scss/pages/_product-list.scss
@@ -2,6 +2,12 @@
     padding-left: 12px;
     padding-right: 12px;
 }
+@media(max-width: 376px){
+    .container-product-list{
+        padding-left: 8px;
+        padding-right: 8px;
+    }
+}
 
 /* .product-list */
 .container-product-list a{
