display 10th shoes card

--- a/assets/scss/pages/_product-list.scss
+++ b/assets/scss/pages/_product-list.scss
@@ -73,13 +73,9 @@
         margin-left: -6px;
         margin-right: -6px;
     }
-//     .container-product-list main .content .product-list-card{
-//         padding-left: 6px;
-//         padding-right: 6px;
-//     }
-//     .container-product-list main .content .shoes-10th{
-//         display: block;
-// }
+    .container-product-list main .content .shoes-10th{
+        display: block;
+}
 }
 
 /* .pagination */
